added games IG and NetEnt Parser

--- a/SwiftGen.playground/Resources/configuration.plist
+++ b/SwiftGen.playground/Resources/configuration.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Environment</key>
-	<string>development</string>
+	<string>development_test</string>
 	<key>Options</key>
 	<dict>
 		<key>Animation Style</key>
